# postfix-admin-rs

./: .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  SECURITY.fr.md  SECURITY.md  TODO.md  config.example.toml  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: default.toml  dev.toml  prep.toml  prod.toml  test.toml
crates/postfix-admin-api/: Cargo.toml
crates/postfix-admin-api/src/: error.rs  extractors.rs  lib.rs  openapi.rs  response.rs  state.rs
crates/postfix-admin-api/src/middleware/: mod.rs  rate_limit.rs
crates/postfix-admin-api/src/routes/: admins.rs  alias_domains.rs  aliases.rs  auth.rs  dkim.rs  domains.rs  fetchmail.rs  logs.rs  mailboxes.rs  mod.rs  vacations.rs
crates/postfix-admin-auth/: Cargo.toml
crates/postfix-admin-auth/src/: app_password.rs  csrf.rs  error.rs  jwt.rs  lib.rs  mtls.rs  password.rs  rate_limit.rs  rbac.rs  totp.rs
crates/postfix-admin-cli/: Cargo.toml
crates/postfix-admin-cli/src/: main.rs
crates/postfix-admin-core/: Cargo.toml
crates/postfix-admin-core/src/: error.rs  lib.rs  pagination.rs  validation.rs
crates/postfix-admin-core/src/config/: error.rs  loader.rs  mod.rs  profile.rs  validate.rs
crates/postfix-admin-core/src/config/sections/: api.rs  auth.rs  database.rs  dkim.rs  domain_defaults.rs  encryption.rs  fetchmail.rs  grpc.rs  logging.rs  mail.rs  mod.rs  password_policy.rs  security.rs  server.rs  ui.rs  vacation.rs
crates/postfix-admin-core/src/dto/: admin_dto.rs  alias_domain_dto.rs  alias_dto.rs  app_password_dto.rs  dkim_dto.rs  domain_admin_dto.rs  domain_dto.rs  fetchmail_dto.rs  log_dto.rs  mailbox_dto.rs  mod.rs  quota_dto.rs  totp_exception_dto.rs  vacation_dto.rs
crates/postfix-admin-core/src/models/: admin.rs  alias.rs  alias_domain.rs  app_password.rs  dkim.rs  domain.rs  fetchmail.rs  log.rs  mailbox.rs  mod.rs  quota.rs  totp_exception.rs  vacation.rs
crates/postfix-admin-core/src/repository/: admin_repository.rs  alias_domain_repository.rs  alias_repository.rs  app_password_repository.rs  dkim_repository.rs  domain_repository.rs  fetchmail_repository.rs  log_repository.rs  mailbox_repository.rs  mod.rs  vacation_repository.rs
crates/postfix-admin-core/src/types/: domain_name.rs  email_address.rs  ip_address.rs  mod.rs  password.rs
crates/postfix-admin-core/tests/: config_loading.rs
crates/postfix-admin-db/: Cargo.toml
crates/postfix-admin-db/src/: error.rs  lib.rs  pool.rs  rows.rs  transaction.rs
crates/postfix-admin-db/src/migrations/mysql/: 0001_initial_schema.sql
crates/postfix-admin-db/src/migrations/postgres/: 0001_initial_schema.sql
crates/postfix-admin-db/src/mysql/: admin_repo.rs  alias_domain_repo.rs  alias_repo.rs  app_password_repo.rs  dkim_repo.rs  domain_repo.rs  fetchmail_repo.rs  log_repo.rs  mailbox_repo.rs  mod.rs  vacation_repo.rs
crates/postfix-admin-db/src/postgres/: admin_repo.rs  alias_domain_repo.rs  alias_repo.rs  app_password_repo.rs  dkim_repo.rs  domain_repo.rs  fetchmail_repo.rs  log_repo.rs  mailbox_repo.rs  mod.rs  vacation_repo.rs
crates/postfix-admin-db/tests/: mysql_integration.rs  postgres_integration.rs
crates/postfix-admin-db/tests/common/: mod.rs
crates/postfix-admin-server/: Cargo.toml
crates/postfix-admin-server/src/: main.rs
crates/postfix-admin-web/: Cargo.toml
crates/postfix-admin-web/src/: lib.rs  session.rs  state.rs  templates.rs
crates/postfix-admin-web/src/routes/: auth.rs  dashboard.rs  domains.rs  mod.rs
crates/postfix-admin-web/templates/: base.html  dashboard.html  layout.html  login.html
crates/postfix-admin-web/templates/domains/: form.html  list.html
docs/architecture/: ARCHITECTURE.md
docs/database/: SCHEMA.md
docs/deployment/: DEPLOYMENT.md
docs/en/architecture/: ARCHITECTURE.md
docs/en/database/: SCHEMA.md
docs/en/deployment/: DEPLOYMENT.md  SECURITY-HARDENING.md
docs/en/features/: 00-overview.md
docs/en/features/01-domains/: alias-domains.md  domain-management.md
docs/en/features/02-mailboxes/: mailbox-management.md  quota-management.md
docs/en/features/03-aliases/: alias-management.md
docs/en/features/05-authorization/: rbac.md
docs/en/guidelines/: CODE-REVIEW.md  GIT-WORKFLOW.md  GUIDELINES-CSS.md  GUIDELINES-JS.md  GUIDELINES-Rust.md  GUIDELINES-SQL.md
docs/en/migration/: MIGRATION-FROM-PHP.md
docs/features/: 00-overview.md
docs/features/01-domains/: alias-domains.md  domain-management.md
docs/features/02-mailboxes/: mailbox-management.md  quota-management.md
docs/features/03-aliases/: alias-management.md
docs/features/04-authentication/: admin-authentication.md  app-passwords.md  password-schemes.md  totp-2fa.md  user-authentication.md
docs/features/05-authorization/: rbac.md
docs/features/06-vacation/: vacation-autoresponder.md
docs/features/07-fetchmail/: fetchmail-integration.md
docs/features/08-dkim/: dkim-management.md
docs/features/09-logging/: audit-logging.md
docs/features/10-api/: grpc-api.md  rest-api.md
docs/features/11-cli/: cli-administration.md
docs/features/12-web-ui/: web-interface.md
docs/features/13-configuration/: configuration.md
docs/fr/architecture/: ARCHITECTURE.md
docs/fr/database/: SCHEMA.md
docs/fr/deployment/: DEPLOYMENT.md  SECURITY-HARDENING.md
docs/fr/features/: 00-overview.md
docs/fr/guidelines/: CODE-REVIEW.md  GIT-WORKFLOW.md  GUIDELINES-CSS.md  GUIDELINES-JS.md  GUIDELINES-Rust.md  GUIDELINES-SQL.md
docs/fr/migration/: MIGRATION-FROM-PHP.md
docs/guidelines/: CODE-REVIEW.md  GIT-WORKFLOW.md  GUIDELINES-CSS.md  GUIDELINES-JS.md  GUIDELINES-Rust.md  GUIDELINES-SQL.md
docs/migration/: MIGRATION-FROM-PHP.md
scripts/: add-lang-banners.py  fix-links.py  translate-docs.sh  translate_large.py  translate_ollama.py  validate-translations.py
tests/newman/: package.json
tests/newman/collections/: 01-auth.json  02-domains.json  03-mailboxes.json  04-aliases.json  05-admins.json  06-vacations.json  07-fetchmail.json  08-dkim.json  09-logs.json  10-alias-domains.json  11-error-cases.json
tests/newman/environments/: ci.json  dev.json
(+34 files in other folders)
