[package]
name = "postfix-admin-api"
description = "REST and gRPC API for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
postfix-admin-auth = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }

[lints]
workspace = true
