[package]
name = "postfix-admin-auth"
description = "Authentication, sessions, JWT, TOTP, and RBAC for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
