[package]
name = "postfix-admin-auth"
description = "Authentication, sessions, JWT, TOTP, and RBAC for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
sha-crypt = { workspace = true }
jsonwebtoken = { workspace = true }
utoipa = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
dashmap = { workspace = true }
data-encoding = { workspace = true }
totp-rs = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
