[package]
name = "postfix-admin-cli"
description = "CLI administration tool for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
