[package]
name = "postfix-admin-core"
description = "Domain models, traits, and shared types for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
zeroize = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = { workspace = true }

[lints]
workspace = true
