[package]
name = "postfix-admin-db"
description = "Data access layer for postfix-admin-rs (PostgreSQL, MySQL)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
