[package]
name = "postfix-admin-server"
description = "Main server binary for postfix-admin-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
postfix-admin-db = { workspace = true }
postfix-admin-auth = { workspace = true }
postfix-admin-api = { workspace = true }
postfix-admin-web = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
