[package]
name = "postfix-admin-web"
description = "Web interface for postfix-admin-rs (HTMX + Askama)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
postfix-admin-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
